add_subdirectory(../lib/compat/arduino-compat build_ac)
include(../lib/RadioHead.cmake)
include(../lib/ookDecoder.cmake)
add_subdirectory(compat-test)
add_subdirectory(version)
add_subdirectory(ook-demod)
add_subdirectory(ook-timing)
add_subdirectory(ook-scope)
add_subdirectory(ook-framework)
add_subdirectory(oregon-decode)
add_subdirectory(ook-pio)
